2017-01-19  Justin Squirek  <squirek@adacore.com>
	* exp_ch9.adb (Is_Pure_Barrier): Create function
	Is_Count_Attribute to identify an expansion of the 'Count
	attribute.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244631 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-19  Justin Squirek  <squirek@adacore.com>
+
+	* exp_ch9.adb (Is_Pure_Barrier): Create function
+	Is_Count_Attribute to identify an expansion of the 'Count
+	attribute.
+
 2017-01-19  Pierre-Marie de Rodat  <derodat@adacore.com>
 
 	* exp_dbug.adb (Debug_Renaming_Declaration): Process underlying types.
