Make LTO's implementation of LANG_HOOKS_TYPE_FOR_SIZE the default
gcc/jit/ChangeLog:
	* dummy-frontend.c (jit_langhook_type_for_size): Delete.
	(LANG_HOOKS_TYPE_FOR_SIZE): Don't redefine.

gcc/ChangeLog:
	* langhooks-def.h (lhd_type_for_size): New decl.
	(LANG_HOOKS_TYPE_FOR_SIZE): Define as lhd_type_for_size.
	* langhooks.c (lhd_type_for_size): New function, taken from
	lto_type_for_size.

gcc/lto/ChangeLog:
	* lto-lang.c (builtin_type_for_size): Convert call to
	lto_type_for_size to one through the langhook.
	(lto_type_for_size): Move to langhooks.c and rename to
	lhd_type_for_size.
	(LANG_HOOKS_TYPE_FOR_SIZE): Don't redefine.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244646 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-19  David Malcolm  <dmalcolm@redhat.com>
+
+	* langhooks-def.h (lhd_type_for_size): New decl.
+	(LANG_HOOKS_TYPE_FOR_SIZE): Define as lhd_type_for_size.
+	* langhooks.c (lhd_type_for_size): New function, taken from
+	lto_type_for_size.
+
 2017-01-19  Pat Haugen  <pthaugen@us.ibm.com>
 
 	* config/rs6000/power9.md (power9-alu): Remove 'cmp' type and add
