Fix gcc.dg/attr-alloc_size-4.c on i?86 (PR testsuite/79051)
	PR testsuite/79051
	* gcc.dg/attr-alloc_size-4.c (test_int_range) [__i386__ ||
	__x86_64__]: Allow for target i?86-*-*.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244647 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-19  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	PR testsuite/79051
+	* gcc.dg/attr-alloc_size-4.c (test_int_range) [__i386__ ||
+	__x86_64__]: Allow for target i?86-*-*.
+
 2017-01-19  Matthew Fortune  <matthew.fortune@imgtec.com>
 
 	PR target/78176
