gcc/ 2017-01-19  Tamar Christina  <tamar.christina@arm.com>
	* config/aarch64/aarch64.c (aarch64_simd_gen_const_vector_dup):
	Change int to HOST_WIDE_INT.
	* config/aarch64/aarch64-protos.h
	(aarch64_simd_gen_const_vector_dup): Likewise.
	* config/aarch64/aarch64-simd.md: Add copysign<mode>3.

gcc/testsuite/
2017-01-19  Tamar Christina  <tamar.christina@arm.com>

	* gcc/testsuite/lib/target-supports.exp
	(check_effective_target_vect_call_copysignf): Enable for AArch64.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244649 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2017-01-19  Tamar Christina  <tamar.christina@arm.com>
+
+	* config/aarch64/aarch64.c (aarch64_simd_gen_const_vector_dup):
+	Change int to HOST_WIDE_INT.
+	* config/aarch64/aarch64-protos.h
+	(aarch64_simd_gen_const_vector_dup): Likewise.
+	* config/aarch64/aarch64-simd.md: Add copysign<mode>3.
+
 2017-01-19  David Malcolm  <dmalcolm@redhat.com>
 
 	* langhooks-def.h (lhd_type_for_size): New decl.
