Fix unsafe moves inside loops
	PR libstdc++/67085
	* include/bits/stl_heap.h (__is_heap): Use _GLIBCXX_MOVE.
	(__make_heap, __sort_heap): Don't use _GLIBCXX_MOVE inside loops.
	* testsuite/23_containers/priority_queue/67085.cc: Adjust expected
	number of copies.
	* testsuite/25_algorithms/make_heap/movable.cc: New test.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244650 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,6 +1,13 @@
 2017-01-19  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/67085
+	* include/bits/stl_heap.h (__is_heap): Use _GLIBCXX_MOVE.
+	(__make_heap, __sort_heap): Don't use _GLIBCXX_MOVE inside loops.
+	* testsuite/23_containers/priority_queue/67085.cc: Adjust expected
+	number of copies.
+	* testsuite/25_algorithms/make_heap/movable.cc: New test.
+
+	PR libstdc++/67085
 	* include/bits/stl_heap.h (push_heap, __adjust_heap, __pop_heap)
 	(pop_heap, __make_heap, make_heap, __sort_heap, sort_heap): Use
 	_GLIBCXX_MOVE when passing comparison function to other functions.
