PR target/78478 	Revert: 	2013-11-05  Uros Bizjak  <ubizjak@gmail.com>
	* config/i386/rtemself.h (LONG_DOUBLE_TYPE_SIZE): New define.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244653 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2017-01-19  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/78478
+	Revert:
+	2013-11-05  Uros Bizjak  <ubizjak@gmail.com>
+
+	* config/i386/rtemself.h (LONG_DOUBLE_TYPE_SIZE): New define.
+
 2017-01-19  Tamar Christina  <tamar.christina@arm.com>
 
 	* config/aarch64/aarch64.c (aarch64_simd_gen_const_vector_dup):
