--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-20  Alan Modra  <amodra@gmail.com>
+
+	PR target/79144
+	* config/rs6000/rs6000.c (expand_strn_compare): Get the asm name
+	for strcmp and strncmp from corresponding builtin decl.
+
 2017-01-19  Uros Bizjak  <ubizjak@gmail.com>
 
 	* config.gcc (x86_64-*-rtems*): Use i386/rtemself.h
